--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
   /*- Cloud -*/
   --cloud-filter: invert(100%) sepia(100%) saturate(7%) hue-rotate(15deg)
     brightness(113%) contrast(92%);
+  /*- Contact Card -*/
+  --card-filter: invert(79%) sepia(66%) saturate(367%) hue-rotate(354deg) brightness(88%) contrast(93%);
 }
 
 /*-- General --*/
@@ -23,6 +25,9 @@
 html,
 body {
   overflow-x: hidden;
+  height: 100%;
+  min-width: auto;
+  position: relative;
 }
 
 li {
@@ -73,6 +78,7 @@ header {
   font-size: large;
   font-family: "Bungee", cursive;
   background-color: var(--gray);
+  height: auto !important;
 }
 
 header a {
@@ -266,25 +272,114 @@ table {
   padding-bottom: 40px;
 }
 
+.angular-logo {
+  width: 140px !important;
+  height: auto !important;
+  padding-bottom: 15px;
+}
+
 /*-- Contact Page --*/
-.contact-bg {
+.contact-content {
+  display: flex;
+  align-items: center;
+  line-height: 30px;
+  width: 1200px;
+  max-width: 1000px;
+  margin: 0 auto;
+  place-content: center;
+}
+
+.outer{
+  background-color: #272727;
+  display: block;
+  height: 450px;
+  object-fit: cover;
+  position:relative;
+  width: 90%;
+  border-radius: 24px;
+}
+
+.foil{
+  display: inline-block;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  border-radius: 24px;
+}
+
+.foil:before{
+  animation: shine 5s infinite;
+
+  background: linear-gradient(transparent 0%,
+    rgba(255, 255, 255, 0.1) 45%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0.1) 55%,
+    transparent 100%);
+
+  /*transition: all 2s;*/
+  content: "";
+  height: 200%;
+  left:-120%;
   position: absolute;
-  z-index: -1;
+  top:-120%;
+  transform: rotate(-45deg);
+  width: 200%;
+  z-index: 10;
+}
+
+@keyframes shine{
+  100% {top:-150%;left:-150%;}
+  80% {top:-120%;left:-120%;}
+  0%, 20%, 40% {left:100%;top:100%;}
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-bg {
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
 }
 
 .contact-list {
-  margin-top: 30px;
-  text-align: center;
+  flex: 2 1 auto;
+  color: #DBBD5A;
+  font-size: larger;
+  align-self: center;
 }
 
-.contact-form {
-  background-color: rgba(60,60,60,0.2);
+.contact-list h1 {
+  color: #DBBD5A;
+}
+
+.contact-socials {
+  margin-top: 18px;
+}
+.contact-list a {
+  text-decoration: none;
+  color: #DBBD5A;
+}
+
+.contact-list .gh {
+  filter: var(--card-filter);
+  margin-left: 20px;
+}
+
+.contact-extra {
+  display: none;
+}
+
+.extra-socials {
   display: flex;
-  flex-direction: column;
-  position: relative;
-  float: right;
-  padding: 2%;
-  border-radius: 2px;
+  padding-top: 20px;
+  place-content: space-evenly;
 }
 
 .message {
@@ -516,6 +611,8 @@ section h1 {
 @media all and (max-width: 1100px) {
   h1 {
     font-size: 22px;
+    margin: 0;
+    padding: 0 !important;
   }
 
   h2 {
@@ -584,7 +681,11 @@ section h1 {
   }
 
   .greeting {
-    text-align: center;
+    text-align: center
+  }
+
+  .greeting:last-child {
+    margin-top: 55px;
   }
 
   .checkoutlink {
@@ -602,6 +703,54 @@ section h1 {
     border-collapse: separate;
     border-spacing: 10px;
     padding-top: 5%;
+  }
+
+  .self-image{
+    width: 200px;
+    height: auto;
+  }
+
+  .html-logo {
+    width: 70px !important;
+    height: auto !important;
+    padding: 0;
+  }
+  
+  .css-logo {
+    width: 50px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .js-logo {
+    width: 50px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .react-logo {
+    width: 55px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .sql-logo {
+    width: 50px  !important;
+    height: auto  !important;
+        padding: 0;
+  }
+  
+  .mongoDB-logo {
+    width: 70px  !important;
+    height: auto  !important;
+    padding: 0;
+    padding-bottom: 20px;
+  }
+  
+  .angular-logo {
+    width: 70px !important;
+    height: auto !important;
+    padding: 0;
   }
 
   /*- Works Page -*/
@@ -644,12 +793,24 @@ section h1 {
   }
 
   /*- Contact Page -*/
+  .outer {
+    height: 450px;
+  }
+
+  .card-content {
+    height: auto;
+  }
+
+  .contact-content{
+    width: 95%;
+    min-width: 750px !important;
+  }
+
   .contact-form {
     padding: 2% 4%;
   }
 
   .contact-list {
-    padding-bottom: 30px !important;
   }
 
   textarea {
@@ -695,11 +856,49 @@ section h1 {
   }
 }
 
+@media all and (max-width: 749px) {
+  .outer {
+    height: 450px;
+  }
+  .contact-bg {
+    width: 100px;
+    height: auto;
+  }
+
+  .contact-content {
+    width: 90%;
+    min-width: 250px !important;
+  }
+  .contact-list {
+    display: none;
+  }
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .contact-extra {
+    display: block;
+    padding-left: 0 !important;
+    text-align: center;
+  }
+}
+
 /*- Galaxy Fold Levels of Thin -*/
 @media all and (max-width: 300px) {
   /*- Header -*/
   header {
     font-size: 0.5rem;
+  }
+
+  h1 {
+    font-size: 11px !important;
+    margin: 0;
+    padding: 0;
+  }
+
+  h2 {
+    font-size: 9px !important;
   }
 
   /*-- Main Page Content --*/
@@ -709,8 +908,20 @@ section h1 {
   }
 
   /*- Contact Page -*/
-  .contact-form {
-    padding: 2% 5%;
+  .outer {
+    height: 340px;
+  }
+
+  .contact-bg > img {
+    width: 200px;
+    height: auto;
+  }
+
+  .contact-content {
+    width: 250px;
+  }
+  .contact-list {
+    display: none;
   }
 
   textarea {
