--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /*-- Variables --*/
 :root {
   /*- Colors -*/
@@ -13,22 +20,30 @@
   /*- Cloud -*/
   --cloud-filter: invert(100%) sepia(100%) saturate(7%) hue-rotate(15deg)
     brightness(113%) contrast(92%);
+  /*- Contact Card -*/
+  --card-filter: invert(79%) sepia(66%) saturate(367%) hue-rotate(354deg) brightness(88%) contrast(93%);
 }
 
 /*-- General --*/
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
 body {
   overflow-x: hidden;
+  height: 100%;
+  min-width: auto;
+  position: relative;
 }
 
 li {
   list-style-type: none;
   display: inline;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 h1 {
@@ -67,12 +82,17 @@ input:focus {
 
 /*-- Header --*/
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 80px;
   font-size: large;
   font-family: "Bungee", cursive;
   background-color: var(--gray);
+  height: auto !important;
 }
 
 header a {
@@ -88,19 +108,26 @@ header a {
   width: auto;
   height: 35px;
   padding-top: 4px;
-  filter: var(--cloud-filter);
+  -webkit-filter: var(--cloud-filter);
+          filter: var(--cloud-filter);
 }
 
 .nav-links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 64px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-right: 64px;
   padding-top: 10px;
 }
 
 .nav-links a {
   color: var(--white);
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -130,8 +157,12 @@ header a {
 
 /*-- Main Page Content --*/
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   line-height: 30px;
   width: 90%;
   max-width: 1000px;
@@ -139,6 +170,8 @@ header a {
 }
 
 .content a {
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -158,6 +191,8 @@ header a {
 
 .greeting-container {
   text-align:center;
+  display:-webkit-inline-box;
+  display:-ms-inline-flexbox;
   display:inline-flex;
   width: 700px;
   padding-top: 64px;
@@ -173,7 +208,8 @@ header a {
   float: left;
   height: 500px;
   width: auto;
-  object-fit: fill;
+  -o-object-fit: fill;
+     object-fit: fill;
   margin-left: auto;
   margin-right: 20px;
   z-index: 2;
@@ -222,7 +258,8 @@ table {
   float: left;
   height: 300px;
   width: 300px;
-  object-fit: fill;
+  -o-object-fit: fill;
+     object-fit: fill;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
@@ -266,25 +303,160 @@ table {
   padding-bottom: 40px;
 }
 
+.angular-logo {
+  width: 140px !important;
+  height: auto !important;
+  padding-bottom: 15px;
+}
+
 /*-- Contact Page --*/
-.contact-bg {
+.contact-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 30px;
+  width: 1200px;
+  max-width: 1000px;
+  margin: 0 auto;
+  place-content: center;
+}
+
+.outer{
+  background-color: #272727;
+  display: block;
+  height: 450px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position:relative;
+  width: 90%;
+  border-radius: 24px;
+}
+
+.foil{
+  display: inline-block;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  border-radius: 24px;
+}
+
+.foil:before{
+  -webkit-animation: shine 5s infinite;
+          animation: shine 5s infinite;
+
+  background: -webkit-gradient(linear,
+    left top, left bottom,
+    from(transparent),
+    color-stop(45%, rgba(255, 255, 255, 0.1)),
+    color-stop(50%, rgba(255, 255, 255, 0.5)),
+    color-stop(55%, rgba(255, 255, 255, 0.1)),
+    to(transparent));
+
+  background: -o-linear-gradient(transparent 0%,
+    rgba(255, 255, 255, 0.1) 45%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0.1) 55%,
+    transparent 100%);
+
+  background: linear-gradient(transparent 0%,
+    rgba(255, 255, 255, 0.1) 45%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0.1) 55%,
+    transparent 100%);
+
+  /*transition: all 2s;*/
+  content: "";
+  height: 200%;
+  left:-120%;
   position: absolute;
-  z-index: -1;
+  top:-120%;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  width: 200%;
+  z-index: 10;
+}
+
+@-webkit-keyframes shine{
+  100% {top:-150%;left:-150%;}
+  80% {top:-120%;left:-120%;}
+  0%, 20%, 40% {left:100%;top:100%;}
+}
+
+@keyframes shine{
+  100% {top:-150%;left:-150%;}
+  80% {top:-120%;left:-120%;}
+  0%, 20%, 40% {left:100%;top:100%;}
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-bg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contact-list {
-  margin-top: 30px;
-  text-align: center;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 1 auto;
+          flex: 2 1 auto;
+  color: #DBBD5A;
+  font-size: larger;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
-.contact-form {
-  background-color: rgba(60,60,60,0.2);
+.contact-list h1 {
+  color: #DBBD5A;
+}
+
+.contact-socials {
+  margin-top: 18px;
+}
+.contact-list a {
+  text-decoration: none;
+  color: #DBBD5A;
+}
+
+.contact-list .gh {
+  -webkit-filter: var(--card-filter);
+          filter: var(--card-filter);
+  margin-left: 20px;
+}
+
+.contact-extra {
+  display: none;
+}
+
+.extra-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  position: relative;
-  float: right;
-  padding: 2%;
-  border-radius: 2px;
+  padding-top: 20px;
+  place-content: space-evenly;
 }
 
 .message {
@@ -294,7 +466,8 @@ table {
 .email,
 .phone,
 .message {
-  align-self: flex-start;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   border-color: rgba(60,60,60,0.6);
 }
 
@@ -315,7 +488,11 @@ button,
   padding: 12px 28px;
   border: 2px;
   border-radius: 2px;
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
   transition: 0.2s opacity;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin-left: 10px !important;
 }
@@ -350,6 +527,8 @@ a.button:visited {
 }
 
 .coming {
+  width:-webkit-fit-content;
+  width:-moz-fit-content;
   width:fit-content;
 }
 
@@ -367,11 +546,15 @@ section h1 {
 
 @supports (display: grid) {
   .grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     padding: 20px;
     margin: 0;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
   }
   
@@ -384,13 +567,25 @@ section h1 {
     border-radius: 4px;
     padding: 15px;
     padding-bottom: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .skill__item {
-    flex-direction: row !important;
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+    -ms-grid-row-align: center;
+    -ms-grid-column-align: center;
     place-self: center;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1/3;
     padding-bottom: 15px !important;
   }
@@ -400,7 +595,9 @@ section h1 {
   }
 
   .grid__item:last-child {
+    -ms-grid-column: 2;
     grid-column: 2;
+    -ms-grid-row: 3;
     grid-row: 3;
     min-width: 200px;
     place-content: center;
@@ -436,54 +633,98 @@ section h1 {
 }
 
 /*--- Clouds ---*/
-@keyframes cloud-move {
+@-webkit-keyframes cloud-move {
   from {
-    transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
+    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
+            transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
   }
   to {
-    transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
+    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
+            transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
+  }
+}
+@keyframes cloud-move {
+  from {
+    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
+            transform: scaleX(0.25) scaleY(0.25) translate(-75vw, -50vw);
+  }
+  to {
+    -webkit-transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
+            transform: scaleX(0.25) scaleY(0.25) translate(200vw, -50vw);
+  }
+}
+
+@-webkit-keyframes cloud-move-two {
+  from {
+    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
+            transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
+  }
+  to {
+    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
+            transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
   }
 }
 
 @keyframes cloud-move-two {
   from {
-    transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
+    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
+            transform: scaleX(0.4) scaleY(0.4) translate(200vw, -25vw);
   }
   to {
-    transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
+    -webkit-transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
+            transform: scaleX(0.4) scaleY(0.4) translate(-100vw, -25vw);
+  }
+}
+
+@-webkit-keyframes cloud-move-three {
+  from {
+    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
+            transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
+  }
+  to {
+    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
+            transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
   }
 }
 
 @keyframes cloud-move-three {
   from {
-    transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
+    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
+            transform: scaleX(0.2) scaleY(0.2) translate(200vw, -78vw);
   }
   to {
-    transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
+    -webkit-transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
+            transform: scaleX(0.2) scaleY(0.2) translate(-100vw, -78vw);
   }
 }
 
 .cloudy {
   position: absolute;
   float: left;
-  filter: var(--cloud-filter);
-  animation: 25s cloud-move infinite alternate linear;
+  -webkit-filter: var(--cloud-filter);
+          filter: var(--cloud-filter);
+  -webkit-animation: 25s cloud-move infinite alternate linear;
+          animation: 25s cloud-move infinite alternate linear;
   z-index: -1;
 }
 
 .cloudy_two {
   position: absolute;
   float: left;
-  filter: var(--cloud-filter);
-  animation: 30s cloud-move-two infinite alternate linear;
+  -webkit-filter: var(--cloud-filter);
+          filter: var(--cloud-filter);
+  -webkit-animation: 30s cloud-move-two infinite alternate linear;
+          animation: 30s cloud-move-two infinite alternate linear;
   z-index: 3;
 }
 
 .cloudy_three {
   position: absolute;
   float: left;
-  filter: var(--cloud-filter);
-  animation: 20s cloud-move-three infinite alternate linear;
+  -webkit-filter: var(--cloud-filter);
+          filter: var(--cloud-filter);
+  -webkit-animation: 20s cloud-move-three infinite alternate linear;
+          animation: 20s cloud-move-three infinite alternate linear;
   z-index: 1;
 }
 
@@ -501,8 +742,12 @@ section h1 {
 .socials > .socials-links {
   clear: both;
   bottom: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
   padding: 5px 10px;
 }
@@ -516,6 +761,8 @@ section h1 {
 @media all and (max-width: 1100px) {
   h1 {
     font-size: 22px;
+    margin: 0;
+    padding: 0 !important;
   }
 
   h2 {
@@ -524,11 +771,18 @@ section h1 {
 
   /*- Header -*/
   header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 0.75rem;
     height: 10%;
-    justify-content: space-evenly;
-    flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-bottom: 20px;
   }
 
@@ -541,24 +795,36 @@ section h1 {
   .logo {
     width: 75px;
     height: auto;
-    filter: var(--cloud-filter);
+    -webkit-filter: var(--cloud-filter);
+            filter: var(--cloud-filter);
     padding-bottom: 8px;
   }
 
   .nav-links ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 15%;
     text-align: center;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 2% 10%;
     margin-top: 1%;
   }
 
   /*-- Main Page Content --*/
   .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 90%;
     max-width: 1200px;
     overflow-y: hidden;
@@ -575,7 +841,8 @@ section h1 {
     float: left;
     height: 250px;
     width: auto;
-    object-fit: fill;
+    -o-object-fit: fill;
+       object-fit: fill;
     margin: 2%;
   }
 
@@ -584,7 +851,11 @@ section h1 {
   }
 
   .greeting {
-    text-align: center;
+    text-align: center
+  }
+
+  .greeting:last-child {
+    margin-top: 55px;
   }
 
   .checkoutlink {
@@ -604,6 +875,54 @@ section h1 {
     padding-top: 5%;
   }
 
+  .self-image{
+    width: 200px;
+    height: auto;
+  }
+
+  .html-logo {
+    width: 70px !important;
+    height: auto !important;
+    padding: 0;
+  }
+  
+  .css-logo {
+    width: 50px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .js-logo {
+    width: 50px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .react-logo {
+    width: 55px  !important;
+    height: auto  !important;
+    padding: 0;
+  }
+  
+  .sql-logo {
+    width: 50px  !important;
+    height: auto  !important;
+        padding: 0;
+  }
+  
+  .mongoDB-logo {
+    width: 70px  !important;
+    height: auto  !important;
+    padding: 0;
+    padding-bottom: 20px;
+  }
+  
+  .angular-logo {
+    width: 70px !important;
+    height: auto !important;
+    padding: 0;
+  }
+
   /*- Works Page -*/
   a.button {
     margin-right: 10px;
@@ -621,6 +940,7 @@ section h1 {
   }
 
   .grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     grid-gap: 10px;
     width: auto !important;
@@ -644,12 +964,24 @@ section h1 {
   }
 
   /*- Contact Page -*/
+  .outer {
+    height: 450px;
+  }
+
+  .card-content {
+    height: auto;
+  }
+
+  .contact-content{
+    width: 95%;
+    min-width: 750px !important;
+  }
+
   .contact-form {
     padding: 2% 4%;
   }
 
   .contact-list {
-    padding-bottom: 30px !important;
   }
 
   textarea {
@@ -662,7 +994,9 @@ section h1 {
     padding: 16px;
     border: 2rem;
     border-radius: 2rem;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     width: 80%;
   }
 
@@ -683,8 +1017,12 @@ section h1 {
 
   .socials > .socials-links {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 15%;
     position: static;
     padding-bottom: 25px;
@@ -695,11 +1033,49 @@ section h1 {
   }
 }
 
+@media all and (max-width: 749px) {
+  .outer {
+    height: 450px;
+  }
+  .contact-bg {
+    width: 100px;
+    height: auto;
+  }
+
+  .contact-content {
+    width: 90%;
+    min-width: 250px !important;
+  }
+  .contact-list {
+    display: none;
+  }
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .contact-extra {
+    display: block;
+    padding-left: 0 !important;
+    text-align: center;
+  }
+}
+
 /*- Galaxy Fold Levels of Thin -*/
 @media all and (max-width: 300px) {
   /*- Header -*/
   header {
     font-size: 0.5rem;
+  }
+
+  h1 {
+    font-size: 11px !important;
+    margin: 0;
+    padding: 0;
+  }
+
+  h2 {
+    font-size: 9px !important;
   }
 
   /*-- Main Page Content --*/
@@ -709,8 +1085,20 @@ section h1 {
   }
 
   /*- Contact Page -*/
-  .contact-form {
-    padding: 2% 5%;
+  .outer {
+    height: 340px;
+  }
+
+  .contact-bg > img {
+    width: 200px;
+    height: auto;
+  }
+
+  .contact-content {
+    width: 250px;
+  }
+  .contact-list {
+    display: none;
   }
 
   textarea {
